"add metadata for benchmarks"